Open modules